--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
   cursor: pointer;
 }
 .parent {
-  background-image: url('Group 5 (1).png');
+  background-image: url('/public/Group\ 5\ \(1\).png');
 }
